🦚 Fix #8: Provide an endpoint that uses an aggregation pipeline (#11)
Reviewed-on: https://codefirst.iut.uca.fr/git/alexis.drai/pokemong_api/pulls/11
