# src/main/resources/META-INF/openapi.yaml
@@ -94,19 +94,19 @@ paths:
                 items:
                   $ref: '#/components/schemas/Pokemong'
 
-  /pokemong/dob/{startDate}/{endDate}:
+  /pokemong/dob/{start-date}/{end-date}:
 
     get:
       summary: Get Pokemongs born within a certain date interval
       parameters:
-        - name: startDate
+        - name: start-date
           in: path
           required: true
           description: The start of the date interval (inclusive)
           schema:
             type: string
             format: date
-        - name: endDate
+        - name: end-date
           in: path
           required: true
           description: The end of the date interval (inclusive)
@@ -124,6 +124,20 @@ paths:
                   $ref: '#/components/schemas/Pokemong'
         '400':
           description: Invalid date format
+
+  /pokemong/count-by-evo-stage:
+
+    get:
+      summary: Get a mapping of each distinct evolution stage to the count of Pokemongs at that stage
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                additionalProperties:
+                  type: integer
 
   /pokemong:
 
